--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -91,5 +91,45 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   target_include_directories( test_c_matrix_2d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
   target_link_libraries( test_c_matrix_2d PRIVATE unittest )
   add_test( NAME test_c_matrix_2d COMMAND test_c_matrix_2d )
-endif()
 
+  add_executable( test_f_matrix_2d )
+  target_sources( test_f_matrix_2d PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/gemm.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_f_matrix.f90 )
+  target_include_directories( test_f_matrix_2d PRIVATE ${unittest_DIR}/mod_files )
+  target_include_directories( test_f_matrix_2d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+  target_link_libraries( test_f_matrix_2d PRIVATE unittest )
+  add_test( NAME test_f_matrix_2d COMMAND test_f_matrix_2d )
+
+  add_executable( test_bb_block_2d )
+  target_sources( test_bb_block_2d PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/gemm.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_bb_block.f90 )
+  target_include_directories( test_bb_block_2d PRIVATE ${unittest_DIR}/mod_files )
+  target_include_directories( test_bb_block_2d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+  target_link_libraries( test_bb_block_2d PRIVATE unittest )
+  add_test( NAME test_bb_block_2d COMMAND test_bb_block_2d )
+
+endif()
