--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -74,4 +74,21 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   target_include_directories( test_rotation_3d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
   target_link_libraries( test_rotation_3d PRIVATE unittest )
   add_test( NAME test_rotation_3d COMMAND test_rotation_3d )
+
+  add_executable( test_c_matrix_3d )
+  target_sources( test_c_matrix_3d PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/gemm.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_c_matrix.f90 )
+  target_include_directories( test_c_matrix_3d PRIVATE ${unittest_DIR}/mod_files )
+  target_include_directories( test_c_matrix_3d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+  target_link_libraries( test_c_matrix_3d PRIVATE unittest )
+  add_test( NAME test_c_matrix_3d COMMAND test_c_matrix_3d )
 endif()
