[update] mod_rotation.f90

--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -1,16 +1,6 @@
-#set(TARGET_3D ${PROJECT_NAME}_3d)
-#add_library(${TARGET_3D} OBJECT)
-#target_sources(${TARGET_3D} PRIVATE ${f90_src})
-#target_include_directories(${TARGET_3D} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-#set(TARGET_G ${PROJECT_NAME})
-#add_library(${TARGET_G}  OBJECT)
-#target_sources(${TARGET_G}  PRIVATE ${f90_src})
-#target_include_directories(${TARGET_GD} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
 add_subdirectory(mobbrmsd_2d)
 add_subdirectory(mobbrmsd_3d)
-#add_subdirectory(dgroutines)
+add_subdirectory(mobbrmsd)
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_subdirectory(test)
