[update] CMakeLists.txt

--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -23,8 +23,10 @@ execute_process(
 set (initpy "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py")
 set (f2cmap "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap")
 set (sofile "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd.${Python_SOABI}.so")
+set (sofile_2d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_2d.${Python_SOABI}.so")
+set (sofile_3d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_3d.${Python_SOABI}.so")
 
-add_custom_target( mobbrmsd_ ALL DEPENDS ${sofile} )
+add_custom_target( mobbrmsd_ ALL DEPENDS ${sofile} ${sofile_2d} ${sofile_3d} )
 
 include_directories(${PYTHON_INCLUDE_DIR})
 include_directories(${NumPy_INCLUDE_DIRS})
@@ -42,8 +44,8 @@ add_custom_command(
       $<$<CONFIG:Debug>:--debug-capi>
       --f2cmap ${f2cmap}
       "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
-      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/libmobbrmsd.a"
-      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mod_files
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd/libmobbrmsd.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd/mod_files
       ${BLAS_LIBRARIES}
       ${lomp}
       --opt=-O2
@@ -73,8 +75,90 @@ add_custom_command(
             "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
   )
 
+add_custom_command(
+    OUTPUT ${sofile_2d}
+    COMMAND ${F2PY_EXECUTABLE}
+      -c
+      -m mobbrmsd_2d
+      --no-wrap-functions
+      $<$<CONFIG:Debug>:--debug-capi>
+      --f2cmap ${f2cmap}
+      "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/libmobbrmsd_2d.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/mod_files
+      ${BLAS_LIBRARIES}
+      ${lomp}
+      --opt=-O2
+      --f90flags='
+      "${BLAS_LINKER_FLAGS}"
+      "${OpenMP_Fortran_FLAGS}"
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-std=f2008">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fimplicit-none">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fall-intrinsics">
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-Wuninitialized">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fbounds-check">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-Wunused">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fbacktrace">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fcheck=array-temps,bounds,do,mem,pointer,recursion">>
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-stand">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"f08">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-free">
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-warn">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:" all">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-check">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"bounds">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-traceback">>
+      '
+      $<$<CONFIG:Debug>:--debug>
+    DEPENDS mobbrmsd_2d
+            "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap"
+            "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
+  )
+
+add_custom_command(
+    OUTPUT ${sofile_3d}
+    COMMAND ${F2PY_EXECUTABLE}
+      -c
+      -m mobbrmsd_3d
+      --no-wrap-functions
+      $<$<CONFIG:Debug>:--debug-capi>
+      --f2cmap ${f2cmap}
+      "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/libmobbrmsd_3d.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/mod_files
+      ${BLAS_LIBRARIES}
+      ${lomp}
+      --opt=-O2
+      --f90flags='
+      "${BLAS_LINKER_FLAGS}"
+      "${OpenMP_Fortran_FLAGS}"
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-std=f2008">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fimplicit-none">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fall-intrinsics">
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-Wuninitialized">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fbounds-check">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-Wunused">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fbacktrace">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fcheck=array-temps,bounds,do,mem,pointer,recursion">>
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-stand">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"f08">
+      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-free">
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-warn">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:" all">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-check">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"bounds">>
+      $<$<CONFIG:Debug>:$<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-traceback">>
+      '
+      $<$<CONFIG:Debug>:--debug>
+    DEPENDS mobbrmsd_3d
+            "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap"
+            "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
+  )
+
 install( FILES ${sofile} DESTINATION mobbrmsd )
-install( FILES ${initpy} DESTINATION mobbrmsd )
+install( FILES ${sofile_2d} DESTINATION mobbrmsd )
+install( FILES ${sofile_3d} DESTINATION mobbrmsd )
+install( FILES ${initpy}  DESTINATION mobbrmsd )
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   find_package(unittest REQUIRED)
