[add] setup.cfg

--- a/src/mobbrmsd/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd/CMakeLists.txt
@@ -36,8 +36,8 @@ install(TARGETS ${TARGET_GD}_static
         LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_GD}/lib")
 install(TARGETS ${TARGET_GD}_shared
         EXPORT ${TARGET_GD}-export
-        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
-        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_GD}/lib"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_GD}/lib")
 install(EXPORT ${TARGET_GD}-export
         NAMESPACE ${TARGET_GD}::
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_GD}")
