--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -34,8 +34,8 @@ install(TARGETS ${TARGET_2D}_static
         LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_2D}/lib")
 install(TARGETS ${TARGET_2D}_shared
         EXPORT ${TARGET_2D}-export
-        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
-        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_2D}/lib"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_2D}/lib")
 install(EXPORT ${TARGET_2D}-export
         NAMESPACE ${TARGET_2D}::
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_2D}")
