--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -34,8 +34,8 @@ install(TARGETS ${TARGET_3D}_static
         LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_3D}/lib")
 install(TARGETS ${TARGET_3D}_shared
         EXPORT ${TARGET_3D}-export
-        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
-        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_3D}/lib"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_3D}/lib")
 install(EXPORT ${TARGET_3D}-export
         NAMESPACE ${TARGET_3D}::
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_3D}")
