[update] README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ license = MIT
 [options]
 packages = src/python_interface
 install_requires =
-    setuptools >= 42
+    setuptools
     wheel
     scikit-build
     cmake >= 3.9
