[update] enable fpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 add_compile_options(
   ${OpenMP_Fortran_FLAGS}
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O2>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-cpp>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fall-intrinsics>
