[add] __version__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mobbrmsd
-version = 0.0.2
+version = attr: src.python_interface.__version__.__version__
 description = molecular orientation corrected rmsd with branch-and-bound
 long_description = file: README.md
 long_description_content_type = text/markdown
