--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -1,51 +1,79 @@
-find_package(F2PY REQUIRED)
-find_package(Python 3.8 REQUIRED COMPONENTS NumPy)
 find_package(BLAS REQUIRED)
 find_package(OpenMP REQUIRED)
 find_package(Threads REQUIRED)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
-if (NOT CMAKE_INSTALL_PYTHON_LIBDIR)
-  execute_process(
-   COMMAND "${PYTHON_EXECUTABLE}" -c "if True:
-             from distutils import sysconfig as sc
-             print(sc.get_python_lib(prefix='', plat_specific=True))"
-   OUTPUT_VARIABLE CMAKE_INSTALL_PYTHON_LIBDIR
-   OUTPUT_STRIP_TRAILING_WHITESPACE)
- endif ()
+add_compile_options(
+  ${OpenMP_Fortran_FLAGS}
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O3>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-cpp>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fall-intrinsics>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fexternal-blas>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wuninitialized>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbounds-check>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wunused>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbacktrace>
+  $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fcheck=array-temps,bounds,do,mem,pointer>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-O3>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-fpp>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-stand>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:f08>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-free>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-implicitnone>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-qopt-matmul>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-warn>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:all>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-check>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:bounds>
+  $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-traceback>
+)
+
+if(SKBUILD)
+  find_package(F2PY REQUIRED)
+  find_package(Python 3.8 REQUIRED COMPONENTS NumPy)
+
+  if (NOT CMAKE_INSTALL_PYTHON_LIBDIR)
+    execute_process(
+     COMMAND "${PYTHON_EXECUTABLE}" -c "if True:
+               from distutils import sysconfig as sc
+               print(sc.get_python_lib(prefix='', plat_specific=True))"
+     OUTPUT_VARIABLE CMAKE_INSTALL_PYTHON_LIBDIR
+     OUTPUT_STRIP_TRAILING_WHITESPACE)
+   endif ()
 
 # Grab the variables from a local Python installation
 # NumPy headers
-execute_process(
-  COMMAND "${PYTHON_EXECUTABLE}"
-    -c "import numpy; print(numpy.get_include())"
-  OUTPUT_VARIABLE NumPy_INCLUDE_DIRS
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-  )
+  execute_process(
+    COMMAND "${PYTHON_EXECUTABLE}"
+      -c "import numpy; print(numpy.get_include())"
+    OUTPUT_VARIABLE NumPy_INCLUDE_DIRS
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
 # F2PY headers
-execute_process(
-  COMMAND "${PYTHON_EXECUTABLE}"
-  -c "import numpy.f2py; print(numpy.f2py.get_include())"
-  OUTPUT_VARIABLE F2PY_INCLUDE_DIR
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-  )
+  execute_process(
+    COMMAND "${PYTHON_EXECUTABLE}"
+    -c "import numpy.f2py; print(numpy.f2py.get_include())"
+    OUTPUT_VARIABLE F2PY_INCLUDE_DIR
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
 
-set (initpy "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py")
-set (f2cmap "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap")
-set (sofile "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd.${Python_SOABI}.so")
-set (sofile_2d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_2d.${Python_SOABI}.so")
-set (sofile_3d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_3d.${Python_SOABI}.so")
+  set (f2cmap "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap")
+  set (sofile "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd.${Python_SOABI}.so")
+  set (sofile_2d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_2d.${Python_SOABI}.so")
+  set (sofile_3d "${CMAKE_CURRENT_BINARY_DIR}/mobbrmsd_3d.${Python_SOABI}.so")
 
-add_custom_target( mobbrmsd_ ALL DEPENDS ${sofile} ${sofile_2d} ${sofile_3d} )
+  add_custom_target( mobbrmsd_ ALL DEPENDS ${sofile} ${sofile_2d} ${sofile_3d} )
 
-include_directories(${PYTHON_INCLUDE_DIR})
-include_directories(${NumPy_INCLUDE_DIRS})
+  include_directories(${PYTHON_INCLUDE_DIR})
+  include_directories(${NumPy_INCLUDE_DIRS})
 
-foreach(var IN ITEMS ${OpenMP_Fortran_LIB_NAMES})
-  list( APPEND lomp "-l${var} " )
-endforeach()
+  foreach(var IN ITEMS ${OpenMP_Fortran_LIB_NAMES})
+    list( APPEND lomp "-l${var} " )
+  endforeach()
 
-add_custom_command(
+  add_custom_command(
     OUTPUT ${sofile}
     COMMAND ${F2PY_EXECUTABLE}
       -c
@@ -85,7 +113,7 @@ add_custom_command(
             "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
   )
 
-add_custom_command(
+  add_custom_command(
     OUTPUT ${sofile_2d}
     COMMAND ${F2PY_EXECUTABLE}
       -c
@@ -125,7 +153,7 @@ add_custom_command(
             "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
   )
 
-add_custom_command(
+  add_custom_command(
     OUTPUT ${sofile_3d}
     COMMAND ${F2PY_EXECUTABLE}
       -c
@@ -165,7 +193,7 @@ add_custom_command(
             "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
   )
 
-install(FILES
+  install(FILES
     ${sofile}
     ${sofile_2d}
     ${sofile_3d}
@@ -174,37 +202,12 @@ install(FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/__version__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__mobbrmsd__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__coord_generator__.py"
-  DESTINATION
+    DESTINATION
     "${CMAKE_INSTALL_PYTHON_LIBDIR}/mobbrmsd")
 
-if( CMAKE_BUILD_TYPE MATCHES "Debug" )
+endif()
 
-  add_compile_options(
-    ${OpenMP_Fortran_FLAGS}
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O3>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-cpp>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fall-intrinsics>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fexternal-blas>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wuninitialized>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbounds-check>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wunused>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbacktrace>
-    $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fcheck=array-temps,bounds,do,mem,pointer>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-O3>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-fpp>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-stand>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:f08>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-free>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-implicitnone>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-qopt-matmul>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-warn>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:all>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-check>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:bounds>
-    $<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-traceback>
-  )
+if( CMAKE_BUILD_TYPE MATCHES "Debug" )
 
   find_package(unittest REQUIRED)
   add_compile_options(${BLAS_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS})
