[add] demo_bb.py

--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -202,6 +202,7 @@ if(SKBUILD)
     "${CMAKE_CURRENT_SOURCE_DIR}/__version__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__mobbrmsd__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__coord_generator__.py"
+    "${CMAKE_CURRENT_SOURCE_DIR}/demo_bb.py"
     DESTINATION
     "${CMAKE_INSTALL_PYTHON_LIBDIR}/mobbrmsd")
 
