--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -16,8 +16,6 @@ if ( INT )
   target_compile_definitions(${TARGET_2D} PUBLIC INT${INT})
 endif ()
 
-target_include_directories(${TARGET_2D} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
-
 target_sources(${TARGET_2D} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
@@ -33,11 +31,14 @@ target_sources(${TARGET_2D} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90 )
 
+target_include_directories(${TARGET_2D} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_link_libraries(${TARGET_2D} PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
 set_target_properties(${TARGET_2D} PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_2D_DIR})
 add_library(${TARGET_2D}_shared SHARED $<TARGET_OBJECTS:mobbrmsd_2d>)
 set_target_properties(${TARGET_2D}_shared PROPERTIES OUTPUT_NAME ${TARGET_2D})
 add_library(${TARGET_2D}_static STATIC $<TARGET_OBJECTS:mobbrmsd_2d>)
 set_target_properties(${TARGET_2D}_static PROPERTIES OUTPUT_NAME ${TARGET_2D})
+target_link_libraries(${TARGET_2D}_static PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
 
 install(TARGETS ${TARGET_2D}_static
         EXPORT ${TARGET_2D}-export
@@ -182,5 +183,6 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   target_include_directories( test_mobbrmsd_2d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
   target_link_libraries(test_mobbrmsd_2d PRIVATE unittest)
   target_link_libraries(test_mobbrmsd_2d PRIVATE purelapack)
+  target_link_libraries(test_mobbrmsd_2d PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
   add_test( NAME test_mobbrmsd_2d COMMAND test_mobbrmsd_2d 0)
 endif()
