--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -33,11 +33,13 @@ target_sources(${TARGET_3D} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90 )
 
+target_link_libraries(${TARGET_3D} PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
 set_target_properties(${TARGET_3D} PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_3D_DIR})
 add_library(${TARGET_3D}_shared SHARED $<TARGET_OBJECTS:mobbrmsd_3d>)
 set_target_properties(${TARGET_3D}_shared PROPERTIES OUTPUT_NAME ${TARGET_3D})
 add_library(${TARGET_3D}_static STATIC $<TARGET_OBJECTS:mobbrmsd_3d>)
 set_target_properties(${TARGET_3D}_static PROPERTIES OUTPUT_NAME ${TARGET_3D})
+target_link_libraries(${TARGET_3D}_static PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
 
 install(TARGETS ${TARGET_3D}_static
         EXPORT ${TARGET_3D}-export
@@ -161,7 +163,8 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_mobbrmsd.f90 )
   target_include_directories( test_mobbrmsd_3d PRIVATE ${unittest_DIR}/mod_files )
   target_include_directories( test_mobbrmsd_3d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-  target_link_libraries(test_mobbrmsd_3d PRIVATE unittest)
-  target_link_libraries(test_mobbrmsd_3d PRIVATE purelapack)
+  target_link_libraries( test_mobbrmsd_3d PRIVATE unittest)
+  target_link_libraries( test_mobbrmsd_3d PRIVATE purelapack)
+  target_link_libraries( test_mobbrmsd_3d PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
   add_test( NAME test_mobbrmsd_3d COMMAND test_mobbrmsd_3d 0)
 endif()
