--- a/src/mobbrmsd/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd/CMakeLists.txt
@@ -180,7 +180,8 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   target_include_directories( test_mobbrmsd PRIVATE ${unittest_DIR}/mod_files )
   target_include_directories( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
   target_link_libraries( test_mobbrmsd PRIVATE unittest )
-  target_link_libraries( test_mobbrmsd PRIVATE purelapack )
+  #  target_link_libraries( test_mobbrmsd PRIVATE purelapack )
+  target_link_libraries( test_mobbrmsd PRIVATE blas )
   target_link_libraries( test_mobbrmsd PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
   add_test( NAME test_mobbrmsd COMMAND test_mobbrmsd 4 )
 endif()
