[update] __coord_generator__.py -> coord_generator.py

--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -173,7 +173,7 @@ if(SKBUILD)
     "${CMAKE_CURRENT_SOURCE_DIR}/__main__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__version__.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/__mobbrmsd__.py"
-    "${CMAKE_CURRENT_SOURCE_DIR}/__coord_generator__.py"
+    "${CMAKE_CURRENT_SOURCE_DIR}/coord_generator.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/demo_bb.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/demo_mst.py"
     DESTINATION
