--- a/src/mobbrmsd/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd/CMakeLists.txt
@@ -17,6 +17,8 @@ if ( INT )
 endif ()
 
 target_sources(${TARGET_GD} PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -30,13 +32,15 @@ target_sources(${TARGET_GD} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90 )
+
 target_include_directories(${TARGET_GD} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 target_link_libraries( ${TARGET_GD} PRIVATE blas )
 target_link_libraries( ${TARGET_GD} PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
-
 set_target_properties(${TARGET_GD} PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_GD_DIR})
+
 add_library(${TARGET_GD}_shared SHARED $<TARGET_OBJECTS:mobbrmsd>)
 set_target_properties(${TARGET_GD}_shared PROPERTIES OUTPUT_NAME ${TARGET_GD})
+target_link_libraries( ${TARGET_GD}_shared PRIVATE blas )
 target_link_libraries(${TARGET_GD}_shared PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
 
 add_library(${TARGET_GD}_static STATIC $<TARGET_OBJECTS:mobbrmsd>)
@@ -174,14 +178,16 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_mobbrmsd.f90 )
   target_include_directories( test_mobbrmsd PRIVATE ${unittest_DIR}/mod_files )
   target_include_directories( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
   target_link_libraries( test_mobbrmsd PRIVATE unittest )
-  #  target_link_libraries( test_mobbrmsd PRIVATE purelapack )
-  target_link_libraries( test_mobbrmsd PRIVATE blas )
+  target_link_libraries( test_mobbrmsd PRIVATE purelapack )
+  #  target_link_libraries( test_mobbrmsd PRIVATE blas )
   target_link_libraries( test_mobbrmsd PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
   add_test( NAME test_mobbrmsd COMMAND test_mobbrmsd 4 )
 endif()
