--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -20,6 +20,7 @@ target_include_directories(${TARGET_3D} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../i
 
 target_sources(${TARGET_3D} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
@@ -165,6 +166,7 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_mobbrmsd.f90 )
