[add] mod_mobbrmsd_header.f90, mod_mobbrmsd_state.f90

--- a/src/mobbrmsd/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd/CMakeLists.txt
@@ -30,6 +30,8 @@ target_sources(${TARGET_GD} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_header.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90 )
@@ -182,6 +184,8 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_header.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_mobbrmsd.f90 )
