--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -4,6 +4,7 @@ if(BLAS_FOUND)
   add_compile_options(${BLAS_LINKER_FLAGS})
 endif()
 
+add_subdirectory(forbar)
 add_subdirectory(mobbrmsd_2d)
 add_subdirectory(mobbrmsd_3d)
 add_subdirectory(mobbrmsd)
