--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -17,9 +17,6 @@ if ( INT )
 endif ()
 
 target_sources(${TARGET_2D} PRIVATE
-  ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
-  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
-  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -34,7 +31,8 @@ target_sources(${TARGET_2D} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
-  ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90 )
+  ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+  )
 
 target_include_directories(${TARGET_2D} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 target_link_libraries(${TARGET_2D} PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
@@ -184,9 +182,6 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
-    ${CMAKE_CURRENT_SOURCE_DIR}/../isatty.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_iolib.f90
-    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_header.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
