[add] mod_repeat_iterator.f90

--- a/src/mobbrmsd/forbar/CMakeLists.txt
+++ b/src/mobbrmsd/forbar/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(forbar STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/isatty.c
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_optarg.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_iolib.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/mod_word_iterator.f90
   )
 
 target_include_directories(forbar PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -30,6 +31,8 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/isatty.c
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_optarg.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_iolib.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_word_iterator.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_repeat_iterator.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_progress_bar.f90
     test_progress_bar.f90 )
   target_include_directories( test_progress_bar PRIVATE ${unittest_DIR}/mod_files )
