[add] mod_timing_iterator.f90

--- a/src/mobbrmsd/forbar/CMakeLists.txt
+++ b/src/mobbrmsd/forbar/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(forbar STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_repeat_iterator.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_cycle_iterator.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_progbar_iterator.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/mod_timing_iterator.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/mod_forbar.f90
   )
 
@@ -39,6 +40,7 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_repeat_iterator.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_cycle_iterator.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_progbar_iterator.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/mod_timing_iterator.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/mod_forbar.f90
     test_progress_bar.f90 )
   target_include_directories( test_progress_bar PRIVATE ${unittest_DIR}/mod_files )
